.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/algorithms/snapshots/similar__algorithms__myers__diff.snap
---
source: src/algorithms/myers.rs
expression: d.into_inner().ops()
---
[
    Equal {
        old_index: 0,
        new_index: 0,
        len: 3,
    },
    Replace {
        old_index: 3,
        old_len: 1,
        new_index: 3,
        new_len: 1,
    },
    Equal {
        old_index: 4,
        new_index: 4,
        len: 1,
    },
]
