.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/algorithms/snapshots/similar__algorithms__myers__pat.snap
---
source: src/algorithms/myers.rs
expression: d.ops()
---
[
    Equal {
        old_index: 0,
        new_index: 0,
        len: 2,
    },
    Delete {
        old_index: 2,
        old_len: 1,
        new_index: 2,
    },
    Equal {
        old_index: 3,
        new_index: 2,
        len: 2,
    },
    Insert {
        old_index: 5,
        new_index: 4,
        new_len: 1,
    },
    Insert {
        old_index: 5,
        new_index: 5,
        new_len: 1,
    },
]
